external-crates/move/crates/move-compiler/tests/move_check/unit_test/invalid_expected_failure_name@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E02015]: invalid attribute
  ┌─ tests/move_check/unit_test/invalid_expected_failure_name.move:4:7
  │
4 │     #[expected_failure=1]
  │       ^^^^^^^^^^^^^^^^^^ Attribute 'expected_failure' does not support assignment. Expected either '#[expected_failure]' or #[expected_failure(<arg>, ...)]'
